2008-03-19  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Services/Banshee.PlaybackController/PlaybackControllerService.cs:
	Added a TrackStarted event that will always be raised, even if the 
	playback controller did not transition to the track, but most importantly
	it will _always_ be raised after the Transition event; this allows
	users to connect to both events to determine if the track that is 
	playing was manually played or not

	* src/Extensions/Banshee.NowPlaying/Banshee.NowPlaying/NowPlayingSource.cs:
	Activate the now playing source if the user manually started playing a
	track with a video stream; uses the nice transition/track start stuff
	noted above

2008-03-19  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceView.cs: Stubbed
	some stuff out to allow showing separator rows; not complete

	* src/Extensions/Banshee.NowPlaying/Banshee.NowPlaying/NowPlayingInterface.cs:
	Pack the video widget into a rounded frame to look sexy

	* src/Extensions/Banshee.NowPlaying/Banshee.NowPlaying/VideoDisplay.cs:

	* src/Libraries/Hyena.Gui/Hyena.Gui.Theming/GtkTheme.cs: Respect ShowStroke

	* src/Libraries/Hyena.Gui/Hyena.Gui.Theming/ThemeContext.cs: Added 
	ShowStroke property

	* src/Libraries/Hyena.Gui/Hyena.Widgets/RoundedFrame.cs: Allow setting
	a custom fill color and the ability to hide the border/stroke

2008-03-19  Aaron Bockover  <abock@gnome.org>

	* build/m4/banshee/gstreamer.m4: Link gstinterfaces and gstvideo libraries

	* libbanshee/gst-playback-0.10.c: First pass at hopefully properly 
	implementing the GstXOverlay stuff; adds video rough video support
	to the pipeline/player engine

	* src/Core/Banshee.Services/Banshee.MediaEngine/NullPlayerEngine.cs:
	* src/Core/Banshee.Services/Banshee.MediaEngine/PlayerEngine.cs:
	* src/Core/Banshee.Services/Banshee.MediaEngine/PlayerEngineService.cs:
	Implement a few video related features to allow setting/exposing to a
	GdkWindow for video support
